tests/negative/neg_pr116_mixed_named_end.safe
package Neg_PR116_Mixed_Named_End

   function Broken returns Integer
      return 1
   end Broken
